# codecs-rs

./: Cargo.toml
src/: utf16.rs
